DefaultEntityDefinition.createDefaultMethodHandle() updated to work with modules, requires some massaging of the module system, with --add-reads for testing and running and --add-module in the server