@@ -48,7 +48,10 @@ ext {
     execMainClass = "$moduleName/is.codion.framework.demos.chinook.ui.ChinookAppPanel"
     execLoadTestMainClass = "$moduleName/is.codion.framework.demos.chinook.testing.ChinookLoadTest"
     testAddModules = ['is.codion.framework.db.test']
-    testAddReads = ['is.codion.framework.demos.chinook': 'is.codion.framework.db.test']
+    testAddReads = [
+            'is.codion.framework.demos.chinook': 'is.codion.framework.db.test',
+            'is.codion.framework.domain': 'is.codion.framework.demos.chinook'
+    ]
 }
 
 javafx {
@@ -98,6 +101,7 @@ classes.finalizedBy buildReports
 task runClientLocal(type: ModularJavaExec) {
     group 'run'
     mainClass = execMainClass
+    jvmArgs = ['--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook']
     systemProperties = [
             'codion.client.connectionType': 'local',
             'codion.db.url'               : 'jdbc:h2:mem:h2db',
@@ -109,6 +113,7 @@ task runClientLocal(type: ModularJavaExec) {
 task runClientRMI(type: ModularJavaExec) {
     group 'run'
     mainClass = execMainClass
+    jvmArgs = ['--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook']
     systemProperties = [
             'codion.client.connectionType'    : 'remote',
             'codion.server.hostname'          : 'localhost',
@@ -121,6 +126,7 @@ task runClientRMI(type: ModularJavaExec) {
 task runClientHttp(type: ModularJavaExec) {
     group 'run'
     mainClass = execMainClass
+    jvmArgs = ['--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook']
     systemProperties = [
             'codion.client.connectionType': 'http',
             'codion.client.http.secure'   : 'false',
@@ -132,6 +138,7 @@ task runClientHttp(type: ModularJavaExec) {
 task runLoadTestRMI(type: ModularJavaExec) {
     group 'run'
     mainClass = execLoadTestMainClass
+    jvmArgs = ['--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook']
     systemProperties = [
             'codion.client.connectionType'    : 'remote',
             'codion.server.hostname'          : 'localhost',
@@ -144,6 +151,7 @@ task runLoadTestRMI(type: ModularJavaExec) {
 task runLoadTestHttp(type: ModularJavaExec) {
     group 'run'
     mainClass = execLoadTestMainClass
+    jvmArgs = ['--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook']
     systemProperties = [
             'codion.client.connectionType': 'http',
             'codion.client.http.secure'   : 'false',
@@ -156,6 +164,7 @@ task clientLocalScript(type: ModularCreateStartScripts) {
     runTask = tasks.runClientLocal
     applicationName = project.name + '-local'
     defaultJvmOpts = [
+            '--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook',
             '-Dcodion.client.connectionType=local',
             '-Dcodion.db.url=jdbc:h2:mem:h2db',
             '-Dcodion.db.initScript=../config/create_schema.sql',
@@ -167,6 +176,7 @@ task clientRMIScript(type: ModularCreateStartScripts) {
     runTask = tasks.runClientRMI
     applicationName = project.name + '-remote'
     defaultJvmOpts = [
+            '--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook',
             '-Dcodion.client.connectionType=remote',
             '-Dcodion.server.hostname=localhost',
             '-Djavax.net.ssl.trustStore=../config/truststore.jks',
@@ -179,6 +189,7 @@ task clientHttpScript(type: ModularCreateStartScripts) {
     runTask = tasks.runClientHttp
     applicationName = project.name + '-http'
     defaultJvmOpts = [
+            '--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook',
             '-Dcodion.client.connectionType=http',
             '-Dcodion.client.http.secure=false',
             '-Dcodion.client.http.hostname=localhost',
@@ -190,6 +201,7 @@ task loadTestRMIScript(type: ModularCreateStartScripts) {
     runTask = tasks.runLoadTestRMI
     applicationName = project.name + '-loadtest-remote'
     defaultJvmOpts = [
+            '--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook',
             '-Dcodion.client.connectionType=remote',
             '-Dcodion.server.hostname=localhost',
             '-Djavax.net.ssl.trustStore=../config/truststore.jks',
@@ -202,6 +214,7 @@ task loadTestHttpScript(type: ModularCreateStartScripts) {
     runTask = tasks.runLoadTestHttp
     applicationName = project.name + '-loadtest-http'
     defaultJvmOpts = [
+            '--add-reads', 'is.codion.framework.domain=is.codion.framework.demos.chinook',
             '-Dcodion.client.connectionType=http',
             '-Dcodion.client.http.secure=false',
             '-Dcodion.client.http.hostname=localhost',
