@@ -121,7 +121,11 @@ task runServer(type: ModularJavaExec, dependsOn: createServerKeystore) {
     classpath = configurations.serverRuntime
     main = mainClassName
     maxHeapSize = '256m'
-    jvmArgs = ['--add-modules', 'is.codion.plugin.jasperreports']
+    jvmArgs = [
+            //using the automatic module name, since domain jars do not contain module-info
+            '--add-modules', 'is.codion.plugin.jasperreports,codion.demos.chinook.domain',
+            '--add-reads', 'is.codion.framework.domain=codion.demos.chinook.domain'
+    ]
     systemProperties = [
             'codion.db.url'                             : 'jdbc:h2:mem:h2db',
             'codion.db.initScript'                      : '../../demos/empdept/src/main/sql/create_schema.sql,../../demos/chinook/src/main/sql/create_schema.sql,../../demos/petclinic/src/main/sql/create_schema.sql,../../demos/petstore/src/main/sql/create_schema.sql,../../demos/world/src/main/sql/create_schema.sql',
